tests/baselines/reference/assignmentCompatWithCallSignatures2.errors.txt
==== tests/cases/compiler/assignmentCompatWithCallSignatures2.ts (12 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        f(x: number): void;
    }
    var t: T;
    var a: { f(x: number): void };
    
    t = a;
    a = t;
    
    interface S {
        f(x: number): string;
    }
    var s: S;
    var a2: { f(x: number): string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    t = { f: () => 1 };
    t = { f: <T>(x:T) => 1 };
    t = { f: function f() { return 1 } };
    t = { f(x: number) { return ''; } }
    a = { f: () => 1 }
    a = { f: <T>(x: T) => 1 };
    a = { f: function (x: number) { return ''; } }
    
    // errors
    t = () => 1;
    ~
!!! assignmentCompatWithCallSignatures2.ts(31,1): error TS2012: Cannot convert '() => number' to 'T':
!!! 	Type '() => number' is missing property 'f' from type 'T'.
    t = function (x: number) { return ''; }
    ~
!!! assignmentCompatWithCallSignatures2.ts(32,1): error TS2012: Cannot convert '(x: number) => string' to 'T':
!!! 	Type '(x: number) => string' is missing property 'f' from type 'T'.
    a = () => 1;
    ~
!!! assignmentCompatWithCallSignatures2.ts(33,1): error TS2012: Cannot convert '() => number' to '{ f(x: number): void; }':
!!! 	Type '() => number' is missing property 'f' from type '{ f(x: number): void; }'.
    a = function (x: number) { return ''; }
    ~
!!! assignmentCompatWithCallSignatures2.ts(34,1): error TS2012: Cannot convert '(x: number) => string' to '{ f(x: number): void; }':
!!! 	Type '(x: number) => string' is missing property 'f' from type '{ f(x: number): void; }'.
    
    interface S2 {
        f(x: string): void;
    }
    var s2: S2;
    var a3: { f(x: string): void };
    // these are errors
    t = s2;
    ~
!!! assignmentCompatWithCallSignatures2.ts(42,1): error TS2012: Cannot convert 'S2' to 'T':
!!! 	Types of property 'f' of types 'S2' and 'T' are incompatible:
!!! 		Call signatures of types '(x: string) => void' and '(x: number) => void' are incompatible.
    t = a3;
    ~
!!! assignmentCompatWithCallSignatures2.ts(43,1): error TS2012: Cannot convert '{ f(x: string): void; }' to 'T':
!!! 	Types of property 'f' of types '{ f(x: string): void; }' and 'T' are incompatible:
!!! 		Call signatures of types '(x: string) => void' and '(x: number) => void' are incompatible.
    t = (x: string) => 1;
    ~
!!! assignmentCompatWithCallSignatures2.ts(44,1): error TS2012: Cannot convert '(x: string) => number' to 'T':
!!! 	Type '(x: string) => number' is missing property 'f' from type 'T'.
    t = function (x: string) { return ''; }
    ~
!!! assignmentCompatWithCallSignatures2.ts(45,1): error TS2012: Cannot convert '(x: string) => string' to 'T':
!!! 	Type '(x: string) => string' is missing property 'f' from type 'T'.
    a = s2;
    ~
!!! assignmentCompatWithCallSignatures2.ts(46,1): error TS2012: Cannot convert 'S2' to '{ f(x: number): void; }':
!!! 	Types of property 'f' of types 'S2' and '{ f(x: number): void; }' are incompatible:
!!! 		Call signatures of types '(x: string) => void' and '(x: number) => void' are incompatible.
    a = a3;
    ~
!!! assignmentCompatWithCallSignatures2.ts(47,1): error TS2012: Cannot convert '{ f(x: string): void; }' to '{ f(x: number): void; }':
!!! 	Types of property 'f' of types '{ f(x: string): void; }' and '{ f(x: number): void; }' are incompatible:
!!! 		Call signatures of types '(x: string) => void' and '(x: number) => void' are incompatible.
    a = (x: string) => 1;
    ~
!!! assignmentCompatWithCallSignatures2.ts(48,1): error TS2012: Cannot convert '(x: string) => number' to '{ f(x: number): void; }':
!!! 	Type '(x: string) => number' is missing property 'f' from type '{ f(x: number): void; }'.
    a = function (x: string) { return ''; }
    ~
!!! assignmentCompatWithCallSignatures2.ts(49,1): error TS2012: Cannot convert '(x: string) => string' to '{ f(x: number): void; }':
!!! 	Type '(x: string) => string' is missing property 'f' from type '{ f(x: number): void; }'.
    